tests/neg-custom-args/i4372.scala
class X[A >: X[_ <: X[_]] <: X[A]] // error
